<resources>
    <string name="app_name">Story App</string>
    <string name="titleAppFirst">Story App</string>
    <string name="titleAppSecond">App</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="name">name</string>
    <string name="description">Description</string>
    <string name="image_result">Image Result</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="signup_success_title">Sign Up Successful!</string>
    <string name="signup_failed_title">Sign Up Failed!</string>
    <string name="login_success_title">Login Successful!</string>
    <string name="login_failed_title">Login failed!</string>
    <string name="login_success_message">Your account has been successfully login</string>
    <string name="login_failed_message">Your account failed login</string>
    <string name="titleCopyright">ACIL copyright 2023</string>
    <string name="signup_success_message">Your account has been successfully created, please login!</string>
    <string name="signup_failed_message">Your account failed to create, please adjust the conditions!</string>
    <string name="instruction_success">OK</string>
    <string name="message_success_upload_image">You have uploaded your photo, lets see!</string>
    <string name="message_failed_upload_image">The photo you uploaded failed</string>
    <string name="instruction_empty_upload_image">Please input a file first</string>
    <string name="instruction_failed">Retry</string>
    <string name="title_success_upload_image">Upload Successfully</string>
    <string name="title_failed_upload_image">Upload Failed</string>
    <string name="loginDescription">Welcome back ! Glad to see you, Again!</string>
    <string name="textInputEmailLogin">Enter your email</string>
    <string name="textInputPasswordLogin">Enter your password</string>
    <string name="signupDescription">Hello! Register to get started</string>
    <string name="textInputUsernameSignup">Username</string>
    <string name="textInputEmailSignup">Email</string>
    <string name="textInputPasswordSignup">Password</string>
    <string name="btnBack">Back</string>
    <string name="minimum_password">Password Must be at least 8 character</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="signup_question">Don\'t have an account yet?</string>
    <string name="required_helper" translatable="false" />
    <string name="titleUsername">Username</string>
    <string name="textInputUsername">Enter your username</string>
    <string name="add_button">Add Button</string>
    <string name="uploadStory">Upload Story</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="titleDetail">About Story</string>
    <string name="username">Username</string>
    <string name="createdAt">createdAt</string>
    <string name="titleUploadStory">Upload Story</string>
    <string name="option_method">Select Method</string>
    <string name="camera_option">Take Picture</string>
    <string name="gallery_option">Choose from Gallery</string>
    <string name="add_description">Add a description</string>
    <string name="upload">Upload</string>
    <string name="capture_failed">Failed to capture the image</string>
    <string name="camera_unactivated">Failed to activate the camera</string>
    <string name="camera_activated">Successfully activated the camera</string>
    <string name="title_activity_maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="maps_menu_options">Maps</string>
    <string name="login_question">Have account ?</string>
</resources>