<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="scrollview"
    tools:context=".ui.LoginActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:contentDescription="@string/btnBack"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signupTitle"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:text="@string/loginDescription"
            android:textSize="37sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButton" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVerticalLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVerticalRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp" />

        <TextView
            android:id="@+id/titleEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:text="@string/title_email"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/signupTitle"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:helperText="@string/required_helper"
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:alpha="0"
            app:errorEnabled="true"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toStartOf="@id/guidelineVerticalRight"
            app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@+id/titleEmail">

            <com.example.storyapp.customUI.EditTextCustom
                android:id="@+id/inputTextEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/textInputEmailLogin"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/titlePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:text="@string/title_password"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:layout_marginTop="5dp"
            app:helperText="@string/required_helper"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toStartOf="@id/guidelineVerticalRight"
            app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/titlePassword">

            <com.example.storyapp.customUI.EditTextPassword
                android:id="@+id/inputTextPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/textInputPasswordLogin"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.example.storyapp.customUI.CustomButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/signup_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:layout_marginTop="108dp"
            android:text="@string/signup_question"
            app:layout_constraintEnd_toStartOf="@id/guidelineVerticalRight"
            app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:layout_marginTop="116dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/signup"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/signup_question"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="@+id/signup_question"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>