<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StoryActivity">

    <TextView
        android:id="@+id/titleUploadStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/titleUploadStory"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleUploadStory"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="36dp"
        android:background="@drawable/rounded_corner"
        >

        <ImageView
            android:id="@+id/tv_image_upload"
            android:layout_width="match_parent"
            android:layout_height="258dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_image_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_result"
            />

        <TextView
            android:id="@+id/title_option_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/option_method"
            app:layout_constraintStart_toStartOf="@id/tv_image_upload"
            app:layout_constraintTop_toBottomOf="@id/tv_image_upload"
            android:textSize="14sp"
            />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/ColorTextNightBlack"
            android:id="@+id/btn_camera_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_baseline_camera_24"
            android:drawablePadding="10dp"
            android:minWidth="60dp"
            android:minHeight="48dp"
            android:paddingVertical="5dp"
            android:text="@string/camera_option"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/tv_image_upload"
            app:layout_constraintStart_toStartOf="@+id/title_option_method"
            app:layout_constraintTop_toBottomOf="@+id/title_option_method"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:layout_editor_absoluteX="8dp"
            android:backgroundTint="@color/white"
            />
        <androidx.appcompat.widget.AppCompatButton
            style="@style/ColorTextNightBlack"
            android:id="@+id/btn_gallery_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_baseline_image_search_24"
            android:drawablePadding="10dp"
            android:minWidth="60dp"
            android:minHeight="48dp"
            android:paddingVertical="5dp"
            android:text="@string/gallery_option"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/btn_camera_option"
            app:layout_constraintStart_toStartOf="@+id/btn_camera_option"
            app:layout_constraintTop_toBottomOf="@+id/btn_camera_option"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:layout_editor_absoluteX="8dp"
            android:backgroundTint="@color/white"
            />
        <TextView
            android:id="@+id/title_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/btn_gallery_option"
            app:layout_constraintTop_toBottomOf="@id/btn_gallery_option"
            android:layout_marginTop="4dp"
            android:text="@string/add_description"
            android:textSize="14sp"
            />
        <EditText
            android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:minHeight="48dp"
            android:inputType="text"
            android:autofillHints="name"
            app:layout_constraintStart_toStartOf="@id/title_description"
            app:layout_constraintTop_toBottomOf="@id/title_description"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="14sp"
            />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/input_description"
            app:layout_constraintTop_toBottomOf="@+id/input_description"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/upload"
            android:textAllCaps="false"
            />
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>